# ai-paper-digest

./: .gitignore  COMMIT_ANALYSIS.md  DEVELOPMENT_TIMELINE.md  PROJECT_DEVELOPMENT_STORY.md  README.md  RECOMMENDATION_SYSTEM_DESIGN.md  USER_DATA_MANAGEMENT_README.md  app-startup.mdc  config_manager.py  debug_embedding_recommendations.py  example_summary.py  feed_paper_summarizer_service.py  install-hooks.sh  manage_user_data.py  migrate_summary_json.py  paper_summarizer.py  pyproject.toml  run_app.py  run_tests.sh  summary_page.py  web_app_config.json.example
app/: main.py
debug/: README.md  debug_embedding_recommendations.py  debug_recommendations.py
hooks/: pre-commit
prompts/: ai_check.md  chunk_summary.json.md  summary.json.md  tags.json.md
scripts/: check_font_size.py  migrate_quota.py
story_showcase/: DEVELOPMENT_TIMELINE.md  PROJECT_DEVELOPMENT_STORY.md  index.html
summary_service/: README_title_extractor.md  __init__.py  llm_utils.py  logging_config.py  markdown_processor.py  paper_info_extractor.py  pdf_processor.py  record_manager.py  rss_processor.py  service.py  summary_generator.py  text_processor.py  title_extractor.py
tests/: test_basic_imports.py  test_config_manager.py  test_event_tracking.py  test_event_tracking_integration.py  test_feed_service.py  test_feed_service_integration.py  test_fetch_subsystem.py  test_integration.py  test_page_summarizer.py  test_paper_info_extractor.py  test_paper_submission.py  test_password_authentication.py  test_password_core.py  test_password_frontend.py  test_recommendations.py  test_subsystems.py  (+6 more)
(+119 files in other folders)
